Further attempt to optimize memory consumption